--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <!-- Header -->
       <header class="game-header">
         <h1>Strategy Above The Depths</h1>
-        <p>Ludo Quiz Game - Interface Operator</p>
+        <p>Lomba Cerdas Tangkas Kimia Chemistry Fun Days 2025 - Interface Operator</p>
       </header>
 
       <!-- Main Game Layout -->
@@ -137,14 +137,16 @@
 
             <!-- Steal Section -->
             <div class="steal-section" id="stealSection" style="display: none">
-              <p>Jawaban salah! Tim lain dapat merebut soal ini (5 detik):</p>
+              <p>Jawaban salah! Tim lain dapat merebut soal ini:</p>
               <div class="steal-buttons">
                 <button class="steal-btn" data-team="red">Merah</button>
                 <button class="steal-btn" data-team="blue">Biru</button>
                 <button class="steal-btn" data-team="yellow">Kuning</button>
                 <button class="steal-btn" data-team="green">Hijau</button>
               </div>
-              <div class="steal-timer" id="stealTimer">5</div>
+              <button id="skipStealButton" class="btn btn-secondary">
+                Hanguskan Soal & Lanjut
+              </button>
             </div>
 
             <!-- Steal Validation Section -->
