--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <style>
       body {
-        font-family: Times News Roman, sans-serif;
+        font-family: Times News Roman, Times news Roman;
         background: #2a78c5;
         margin: 0;
         padding: 0;
