--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Booklet Staffing Ion</title>
+    <title>Pengumuman Staffing Ion 2025 </title>
     <link rel="stylesheet" href="styles.css" />
     <style>
       body {
-        font-family: Times News Roman, Times news Roman;
-        background: #2a78c5;
+        font-family: Arial, sans-serif;
+        background: hsl(285, 65%, 47%);
         margin: 0;
         padding: 0;
       }
@@ -40,14 +40,14 @@
     <div class="game-container">
       <!-- Header -->
       <header class="game-header">
-        <h1>Booklet Staffing ION 2025</h1>
-        <p>Internal Introduction HIMAKA FMIPA UNPAD</p>
+        <h1>Pengumuman Staffing ION 2025</h1>
+        <p></p>
       </header>
 
       <!-- Iframe -->
       <iframe
         loading="lazy"
-        src="https://www.canva.com/design/DAGttibRSm4/SqQUPZ9utaAp2rAy81DTFA/view?embed"
+        src="https://www.canva.com/design/DAGudecDyo0/i4qgM7EEuZ1u9Z0JIq7DvA/view?embed"
         allowfullscreen="allowfullscreen"
         allow="fullscreen">
       </iframe>
