--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <style>
       body {
-        font-family: Arial, sans-serif;
+        font-family: Times News Roman, sans-serif;
         background: hsl(232, 91%, 61%);
         margin: 0;
         padding: 0;
