--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pengumuman Staffing Ion 2025 </title>
+    <title>Booklet Quinazora 2025 </title>
     <link rel="stylesheet" href="styles.css" />
     <style>
       body {
@@ -40,16 +40,15 @@
     <div class="game-container">
       <!-- Header -->
       <header class="game-header">
-        <h1>Pengumuman Staffing ION 2025</h1>
+        <h1>Booklet Quinazora 2025</h1>
         <p></p>
       </header>
 
       <!-- Iframe -->
       <iframe
         loading="lazy"
-        src="https://www.canva.com/design/DAGudecDyo0/i4qgM7EEuZ1u9Z0JIq7DvA/view?embed"
-        allowfullscreen="allowfullscreen"
-        allow="fullscreen">
+        src="https://www.canva.com/design/DAGxglL0aGc/f9plRf-q5SOh5vfeF23kyQ/view?embed"
+          allowfullscreen="allowfullscreen" allow="fullscreen">
       </iframe>
     </div>
     <script src="script.js"></script>
